--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ button:hover {
     background: #004080;
 }
 
-/* تنسيق الجوال */
-@media(max-width:600px){
+/* ====== أفضل تنسيق للجوال (بطاقات منظمة ومتناسبة) ====== */
+@media (max-width: 600px) {
 
   table {
-    border: none !important;
+    border: none;
   }
 
   table thead {
@@ -79,23 +79,22 @@ button:hover {
   }
 
   tr {
-    margin-bottom: 15px;
+    margin-bottom: 18px;
     background: #fff;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 12px;
+    padding: 12px;
     border: 1px solid var(--gold);
-    box-shadow: 0 3px 8px rgba(0,0,0,0.08);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
   }
 
   td {
-    text-align: right;
-    padding: 10px;
-    position: relative;
-    padding-right: 120px;
     border: none !important;
-    border-bottom: 1px solid #ccc !important;
-    min-height: 40px;
-    font-size: 1rem;
+    border-bottom: 1px solid #eee !important;
+    padding: 14px 16px;
+    padding-right: 125px;
+    position: relative;
+    font-size: 1.05rem;
+    min-height: 45px;
   }
 
   td:last-child {
@@ -105,18 +104,27 @@ button:hover {
   td::before {
     content: attr(data-label);
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-50%);
     font-weight: bold;
     color: var(--accent);
+    font-size: 0.95rem;
+    width: 110px;
+    line-height: 1.4;
   }
 
-  select, input {
+  /* جعل المدخلات تملأ الخلية */
+  input, select {
     width: 100%;
-    padding: 8px;
-    font-size: 1rem;
+    padding: 10px 12px;
+    font-size: 1.05rem;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
   }
 }
+
 
 /* رسالة تم الحفظ */
 #savedMsg {
@@ -188,3 +196,4 @@ function save() {
 
 </body>
 </html>
+
