--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap');
+
 :root{
   --bg:#f0f4f2; --card:#ffffff; --accent:#1e8b63; --gold:#d4af37;
   --friday:#cfe3d6; --header-col:#49876d; --first-col:#49876d;
@@ -16,6 +17,7 @@ html, body{height:100%; margin:0; font-family:'Amiri', serif; background:var(--b
 .container{ width:95%; max-width:1000px; margin:20px auto; padding:10px; }
 .card{ background:var(--card); border-radius:14px; padding:1.5rem; border:4px solid var(--gold); box-shadow:0 8px 24px rgba(0,0,0,0.08); position:relative; background:url('https://www.toptal.com/designers/subtlepatterns/uploads/moroccan-flower.png') repeat; background-size:250px; backdrop-filter:blur(3px); }
 .card:before{ content:""; position:absolute; top:-10px; left:-10px; right:-10px; bottom:-10px; border:3px solid var(--gold); border-radius:20px; pointer-events:none; }
+h1::before{ content:""; display:block; width:120px; height:120px; margin:0 auto 10px; background: url('./img.png') center/contain no-repeat; }
 h1,h2{ font-size:1.5rem; text-align:center; margin-bottom:1rem; color:var(--accent); font-weight:700; }
 .table-wrapper{ overflow-x:auto; }
 table{ width:100%; min-width:600px; border-collapse: collapse; font-size:1rem; background:#fff; border-radius:12px; border:1px solid var(--gold); }
@@ -37,10 +39,8 @@ table th:first-child, table td:first-child{ width:150px; }
 @media(max-width:600px){ .card-header{ flex-direction: column; align-items:flex-start; } #saveBtn,#printBtn{ width:100%; margin-bottom:0.5rem; } .contact-box{ width:100%; margin-top:0.5rem; } }
 @media print { body * { visibility:hidden; } #mainTable, #mainTable * { visibility:visible; } #mainTable { position:absolute; top:0; left:0; width:100%; } }
 </style>
-
 </head>
 <body>
-
 <div class="container">
   <div class="card">
     <div class="card-header">
@@ -50,15 +50,13 @@ table th:first-child, table td:first-child{ width:150px; }
         <button id="printBtn">🖨️ طباعة</button>
       </div>
       <div class="contact-box">
-        <strong>إدارة الجامع:</strong><br/>
+        <strong> إدارة الجامع:</strong><br/>
         فيصل المبسلي: 98036047<br/>
         داوود المبسلي: 95522897
       </div>
     </div>
-
     <h1>جدول محاضرات رمضان 1447 هـ - جامع الإمام الربيع بن حبيب</h1>
     <h2>السيب - وادي اللوامي</h2>
-
     <div class="table-wrapper">
       <table id="mainTable" aria-label="جدول محاضرات رمضان">
         <thead>
@@ -75,92 +73,100 @@ table th:first-child, table td:first-child{ width:150px; }
   </div>
 </div>
 
-<!-- Firebase + سكربت الجدول -->
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.25.0/firebase-app.js";
-import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.25.0/firebase-database.js";
+<script>
+document.addEventListener("DOMContentLoaded", () => {
 
-const firebaseConfig = {
-  apiKey: "AIzaSyBHeiv5zSF7aBdg-d_jIGO-h7Rf9tY9IHE",
-  authDomain: "ramadan-table.firebaseapp.com",
-  databaseURL: "https://ramadan-table-default-rtdb.firebaseio.com",
-  projectId: "ramadan-table",
-  storageBucket: "ramadan-table.firebasestorage.app",
-  messagingSenderId: "912045120400",
-  appId: "1:912045120400:web:27592d0c367bd2e5c13115"
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
-
-document.addEventListener("DOMContentLoaded",()=>{
-  const tbody=document.querySelector("#mainTable tbody");
-  const TOTAL_DAYS=30;
-  const START_DATE=new Date(2026,1,18);
-  const weekdays=["الأحد","الاثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت"];
+  const tbody = document.querySelector("#mainTable tbody");
+  const TOTAL_DAYS = 30;
+  const START_DATE = new Date(2026, 1, 18);
+  const weekdays = ["الأحد","الاثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت"];
 
   // إنشاء الصفوف
-  for(let i=1;i<=TOTAL_DAYS;i++){
-    const tr=document.createElement("tr");
-    const currentDate=new Date(START_DATE);
-    currentDate.setDate(START_DATE.getDate()+i-1);
-    const weekdayName=weekdays[currentDate.getDay()];
-    if(weekdayName==="الجمعة") tr.classList.add("friday");
+  for (let i = 1; i <= TOTAL_DAYS; i++) {
+    const tr = document.createElement("tr");
+    const currentDate = new Date(START_DATE);
+    currentDate.setDate(START_DATE.getDate() + (i - 1));
+    const weekdayName = weekdays[currentDate.getDay()];
 
-    // التاريخ
-    const tdDate=document.createElement("td");
-    tdDate.textContent=`${currentDate.getDate()}/${currentDate.getMonth()+1}/${currentDate.getFullYear()} - ${weekdayName} - رمضان ${i}`;
+    if (weekdayName === "الجمعة") tr.classList.add("friday");
+
+    const tdDate = document.createElement("td");
+    tdDate.contentEditable = true;
+    tdDate.textContent = `${currentDate.getDate()}/${currentDate.getMonth() + 1}/${currentDate.getFullYear()} - ${weekdayName} - رمضان ${i}`;
     tr.appendChild(tdDate);
 
-    // الوقت (select)
-    const tdTime=document.createElement("td");
-    const select=document.createElement("select");
-    const options=(weekdayName==="الجمعة")?["بعد صلاة الجمعة","بعد صلاة العصر","بعد صلاة المغرب","بعد صلاة العشاء"]
-                                      :["بعد صلاة الظهر","بعد صلاة العصر","بعد صلاة المغرب","بعد صلاة العشاء"];
-    options.forEach(opt=>{ const option=document.createElement("option"); option.value=opt; option.textContent=opt; select.appendChild(option); });
-    tdTime.appendChild(select);
+    const tdTime = document.createElement("td");
+    const selectTime = document.createElement("select");
+
+    const options = (weekdayName === "الجمعة")
+      ? ["بعد صلاة الجمعة", "بعد صلاة العصر", "بعد صلاة المغرب", "بعد صلاة العشاء"]
+      : ["بعد صلاة العصر", "بعد صلاة الظهر", "بعد صلاة المغرب", "بعد صلاة العشاء"];
+
+    options.forEach(opt => {
+      const option = document.createElement("option");
+      option.value = opt;
+      option.textContent = opt;
+      selectTime.appendChild(option);
+    });
+
+    tdTime.appendChild(selectTime);
     tr.appendChild(tdTime);
 
-    // اسم المحاضر (قابل للتحرير)
-    const tdName=document.createElement("td");
-    tdName.contentEditable=true;
+    const tdName = document.createElement("td");
+    tdName.contentEditable = true;
     tr.appendChild(tdName);
 
-    // رقم التواصل (قابل للتحرير)
-    const tdContact=document.createElement("td");
-    tdContact.contentEditable=true;
+    const tdContact = document.createElement("td");
+    tdContact.contentEditable = true;
     tr.appendChild(tdContact);
 
     tbody.appendChild(tr);
   }
 
-  // ربط كل خلية ب Firebase
-  for(let i=1;i<=TOTAL_DAYS;i++){
-    const tr=tbody.querySelectorAll("tr")[i-1];
+  // 🔗 حفظ البيانات في Google Sheets
+  async function saveToGoogleSheet() {
+    const url = "https://script.google.com/macros/s/AKfycbziO5XYo1aiOd4SaDM-jWjpK9hHEQdKCqQL5C9oP1O-vZGHOjpeEOnNySBgRTisdr9rOw/exec";  
+    // ضع رابط الويب آب هنا
 
-    ["3","4"].forEach(col=>{
-      const td=tr.querySelector(`td:nth-child(${col})`);
-      const cellRef=ref(db,"cells/"+i+"_"+col);
-      onValue(cellRef,snap=>{ if(snap.exists()) td.textContent=snap.val(); });
-      td.addEventListener("input",()=>set(cellRef,td.textContent));
+    const rows = [];
+    const trs = document.querySelectorAll("#mainTable tbody tr");
+
+    trs.forEach(tr => {
+      const tds = tr.querySelectorAll("td");
+      const date = tds[0].textContent.trim();
+      const time = tds[1].querySelector("select").value;
+      const name = tds[2].textContent.trim();
+      const phone = tds[3].textContent.trim();
+      rows.push([date, time, name, phone]);
     });
 
-    const select=tr.querySelector("td:nth-child(2) select");
-    const timeRef=ref(db,"cells/"+i+"_2");
-    onValue(timeRef,snap=>{ if(snap.exists()) select.value=snap.val(); });
-    select.addEventListener("change",()=>set(timeRef,select.value));
+    try {
+      const response = await fetch(url, {
+        method: "POST",
+        body: JSON.stringify(rows),
+        headers: { "Content-Type": "application/json" }
+      });
+
+      const result = await response.json();
+      console.log(result);
+
+    } catch (error) {
+      alert("⚠ حدث خطأ أثناء الحفظ!");
+      console.error(error);
+    }
   }
 
-  // زر الحفظ (يمكنك تركه أو حذف لأنه Firebase مباشر)
-  const saveBtn=document.getElementById("saveBtn");
-  const saveMessage=document.getElementById("saveMessage");
-  saveBtn.addEventListener("click",()=>{
-    saveMessage.style.display="inline";
-    setTimeout(()=>saveMessage.style.display="none",2000);
+  // زر الحفظ
+  const saveBtn = document.getElementById("saveBtn");
+  const saveMessage = document.getElementById("saveMessage");
+  saveBtn.addEventListener("click", () => {
+    saveToGoogleSheet();
+    saveMessage.style.display = "inline";
+    setTimeout(() => { saveMessage.style.display = "none"; }, 2000);
   });
 
-  // الطباعة
-  document.getElementById("printBtn").addEventListener("click",()=>window.print());
+  // زر الطباعة
+  document.getElementById("printBtn").addEventListener("click", () => window.print());
 });
 </script>
 
